--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>AGRIDERA</title>
     </head>
     <body>
-        <img class="logo_top" src="C:\praktika\img\Logo.png" />
+        <img class="logo_top" src="img\Logo.png" />
             <div class="search">
                 <input class="SearchInput" type="text" placeholder="Search"> 
                 <div class="search_line"></div>
