--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <div class="nav">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">Company Profile</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
+                        <a class="nav-link" href="TomatoAll.html">Products</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
@@ -163,7 +163,6 @@
             </div>
             <div class="lower_end">
                 <p class="text_end">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
-                
             </div>
         </div>
     </body>    
