--- a/TomatoAll.html
+++ b/TomatoAll.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="head">
-                <img class="logotip" src="img/logo.png">
+                <img class="logotip" src="img/Logo.png">
                 <div class="HeadSerch">
                     <div class="search">
                         <input class="SearchInput" type="text" placeholder="Search"> 
@@ -104,7 +104,7 @@
 
             <div class="one-three">
                 <div class="card">
-                    <a href="file:///C:/praktika/Butulka-company.github.io/TomatoAll.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
+                    <a href="TomatoAll.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
                     <div class="card-body">
                         <div class="card-text">TAG 1002 (TAG 809)</div>
                         <p><p class="card-text1">Tomato Determinate Red Standard Round</p></p>
