--- a/TomatoAll.html
+++ b/TomatoAll.html
@@ -104,7 +104,7 @@
 
             <div class="one-three">
                 <div class="card">
-                    <a href="TomatoAll.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
+                    <a href="TomatoOne.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
                     <div class="card-body">
                         <div class="card-text">TAG 1002 (TAG 809)</div>
                         <p><p class="card-text1">Tomato Determinate Red Standard Round</p></p>
