--- a/TomatoAll.html
+++ b/TomatoAll.html
@@ -26,7 +26,7 @@
                             <li ><a class="NavItem" href="TomatoAll.html">Products</a></li>
                             <li ><a  class="NavItem" href="#">Services</a></li>
                             <li><a class="NavItem" href="#">R&D</a></li>
-                            <li ><a class="NavItem" href="#">Contact</a></li>
+                            <li ><a class="NavItem" href="ContactUs.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -104,7 +104,7 @@
 
             <div class="one-three">
                 <div class="card">
-                    <a href="TomatoOne.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
+                    <a href="TomatoAll.html"> <img  src="img\image 3 (3).png" alt="Card image cap"></a>
                     <div class="card-body">
                         <div class="card-text">TAG 1002 (TAG 809)</div>
                         <p><p class="card-text1">Tomato Determinate Red Standard Round</p></p>
@@ -166,11 +166,11 @@
             <div class="lower_nav">
                 <a class="lower_nav-link" href="#">PROFILE</a>
                 <a class="lower_nav-link" href="#">MANAGEMENT</a>
-                <a class="lower_nav-link" href="#">PRODUCTS</a>
+                <a class="lower_nav-link" href="TomatoAll.html">PRODUCTS</a>
                 <a class="lower_nav-link" href="#">R&D</a>
                 <a class="lower_nav-link" href="#">LINKS</a>
                 <a class="lower_nav-link" href="#">SITEMAP</a>
-                <a class="lower_nav-link" href="#">CONTACT</a>
+                <a class="lower_nav-link" href="ContactUs.html">CONTACT</a>
             </div>
 
             <div class="social_network">
