--- a/TomatoOne.html
+++ b/TomatoOne.html
@@ -24,7 +24,7 @@
                                 <li ><a class="NavItem" href="TomatoAll.html">Products</a></li>
                                 <li ><a  class="NavItem" href="#">Services</a></li>
                                 <li><a class="NavItem" href="#">R&D</a></li>
-                                <li ><a class="NavItem" href="#">Contact</a></li>
+                                <li ><a class="NavItem" href="ContactUs.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -118,11 +118,11 @@
             <div class="lower_nav">
                 <a class="lower_nav-link" href="#">PROFILE</a>
                 <a class="lower_nav-link" href="#">MANAGEMENT</a>
-                <a class="lower_nav-link" href="#">PRODUCTS</a>
+                <a class="lower_nav-link" href="TomatoAll.html">PRODUCTS</a>
                 <a class="lower_nav-link" href="#">R&D</a>
                 <a class="lower_nav-link" href="#">LINKS</a>
                 <a class="lower_nav-link" href="#">SITEMAP</a>
-                <a class="lower_nav-link" href="#">CONTACT</a>
+                <a class="lower_nav-link" href="ContactUs.html">CONTACT</a>
             </div>
 
             <div class="social_network">
