--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="#">R & D</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="ContactUs.html">Contact</a>
                         </li>
                     </ul>
                 </div>
